Version 0.4.1.2 (beta) (2012-11-22):
- fixed client startup
- added 'network communication' button in tablet widget  

Version 0.4.1.1 (beta) (2012-11-03):
- added selection client version before installation (if you have problems with 0.5.9x)

Version 0.4.1 (beta) (2012-11-02):
- added proxy settings
- fixed project installation canceling
- preventing the running of the two operation at same time (installhandler)

Version 0.4.0.5.3 (beta) (2012-10-21):
- fixed client monitor handling (exception)
- fixed colors in the notifications

Version 0.4.0.5.2 (beta) (2012-10-14):
- fixed move to installation
- fixed operation cancelling
- fixed tabs behavior

Version 0.4.0.5.1 (beta) (2012-10-11):
- fixed exec for sdcard installation
- fixed tabs behavior (fixing unhandled exceptions)  

Version 0.4.0.5 (beta) (2012-10-09):
- added installation on SDCard!
- fixed NPE on empty hostname (nativeclient screen)
- fixed main screen resuming
- added support for projects with hosted applications
- added local preferences clearing
- added deleting app_info.xml for attached projects
- other minor fixes

Version 0.4.0.2 (beta) (2012-09-17):
- fixed local prefs and fix NPE

Version 0.4.0.1 (beta) (2012-08-22)
- changed address of distribution files to files.nativeboinc.org

Version 0.4 (beta) (2012-08-15)
- fixed unexpected behavior when connection broken
- fixed and improved notice item list
- added news features: News and Automatic update checks
- fixed encoding at saving config files

Version 0.3.9.9.3 (alpha) (2012-08-05)
- fixed boinc xml parser (used during parsing gui rpc replies)

Version 0.3.9.9.2 (alpha) (2012-07-21)
- fixed wake lock acquiring/releasing for main activity

Version 0.3.9.9.1 (alpha) (2012-06-25)
- fixed autostart (currently made 3 trials)
- added 'run always when plugged' option in localprefs

Version 0.3.9.9 (alpha) (2012-06-24)
- fixed NPE and crashes
- fixed installations and error handling
- improved activites with list