@@ -1582,30 +1582,35 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="1dip"
+			android:hint="@string/widgetStart"
 			android:drawableRight="@android:drawable/ic_media_play" />
 		<Button
 			android:id="@+id/widgetStop"
 			android:layout_width="wrap_content" 
 			android:layout_height="wrap_content"
 			android:textSize="1dip"
+			android:hint="@string/widgetShutdown"
 			android:drawableRight="@android:drawable/ic_media_pause" />
 		<Button
 			android:id="@+id/widgetManager"
 			android:layout_width="wrap_content" 
 			android:layout_height="wrap_content"
 			android:textSize="1dip"
+			android:hint="@string/widgetManager"
 			android:drawableRight="@drawable/nativeboinc_alpha" />
 		<Button
 			android:id="@+id/widgetLock" 
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="1dip"
+			android:hint="@string/widgetScreenLock"
 			android:drawableRight="@android:drawable/ic_lock_lock" />
 		<Button
 			android:id="@+id/widgetNetComm"
 			android:layout_width="wrap_content" 
 			android:layout_height="wrap_content"
 			android:textSize="1dip"
+			android:hint="@string/widgetNetComm"
 			android:drawableRight="@android:drawable/ic_popup_sync" />
     </LinearLayout>
 </LinearLayout>
